# snom-sql

./: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  go.mod  main.go  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wails.json
frontend/: .eslintrc.cjs  .gitignore  bun.lockb  package.json  package.json.md5  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/components/: DaisyUIExperiments.svelte  Resizable.svelte  SplitPaneOld.svelte
frontend/src/hooks/: useFrameRate.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/stores/: theme.ts
frontend/src/styles/: app.css
old-frontend/: index.html  package.json  svelte.config.js  vite.config.ts
old-frontend/.svelte-kit/: ambient.d.ts
src/: route-tree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/icons/: icons.ts  index.ts
src/components/: kbd.tsx  main-command-palette.tsx  primary-sidebar-button.tsx  settings-modal.tsx  solid-tippy.tsx  sql-editor.tsx
src/components/dockable-area/: main-dockable-area.tsx  results-panel.tsx  sql-editor-panel.tsx
src/components/sidebar-tabs/: connections-content.tsx  connections-tab.tsx  main-dockable-area.tsx  queryfiles-tab.tsx
src/contexts/: app.tsx  connections.tsx  theme.tsx  vim-mode.tsx
src/hooks/: use-disclosure.ts
src/lib/: dexie-solid-hook.ts  dexie.ts
src/pages/: +Layout.tsx
src/styles/: app.css  dockview.css
src/utils/: parse-db-url.test.ts  parse-db-url.ts
(+10 files in other folders)
